@@ -54,6 +54,9 @@ filename = include/ppport.h
 [=inc::My::Copy]
 
 [Meta::Dynamic::Config]
+[MetaNoIndex]
+directory = examples
 
 [InsertExample]
 remove_boiler = 1
+
