@@ -2,6 +2,7 @@ MODULE = FFI::Platypus PACKAGE = FFI::Platypus::API
 
 int
 arguments_count()
+  PROTOTYPE:
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -12,6 +13,7 @@ arguments_count()
 void *
 arguments_get_pointer(i)
     int i
+  PROTOTYPE: $
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -23,6 +25,7 @@ void
 arguments_set_pointer(i, value)
     int i
     void *value
+  PROTOTYPE: $$
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -31,6 +34,7 @@ arguments_set_pointer(i, value)
 ffi_pl_string
 arguments_get_string(i)
     int i
+  PROTOTYPE: $
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -42,6 +46,7 @@ void
 arguments_set_string(i, value)
     int i
     ffi_pl_string value
+  PROTOTYPE: $$
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -50,6 +55,7 @@ arguments_set_string(i, value)
 UV
 arguments_get_uint8(i)
     int i
+  PROTOTYPE: $
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -61,6 +67,7 @@ void
 arguments_set_uint8(i, value)
     int i
     UV value
+  PROTOTYPE: $$
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -69,6 +76,7 @@ arguments_set_uint8(i, value)
 IV
 arguments_get_sint8(i)
     int i
+  PROTOTYPE: $
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -80,6 +88,7 @@ void
 arguments_set_sint8(i, value)
     int i
     IV value
+  PROTOTYPE: $$
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -88,6 +97,7 @@ arguments_set_sint8(i, value)
 float
 arguments_get_float(i)
     int i
+  PROTOTYPE: $
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -99,6 +109,7 @@ void
 arguments_set_float(i, value)
     int i
     float value
+  PROTOTYPE: $$
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -107,6 +118,7 @@ arguments_set_float(i, value)
 double
 arguments_get_double(i)
     int i
+  PROTOTYPE: $
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -118,6 +130,7 @@ void
 arguments_set_double(i, value)
     int i
     double value
+  PROTOTYPE: $$
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -126,6 +139,7 @@ arguments_set_double(i, value)
 UV
 arguments_get_uint16(i)
     int i
+  PROTOTYPE: $
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -137,6 +151,7 @@ void
 arguments_set_uint16(i, value)
     int i
     UV value
+  PROTOTYPE: $$
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -145,6 +160,7 @@ arguments_set_uint16(i, value)
 IV
 arguments_get_sint16(i)
     int i
+  PROTOTYPE: $
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -156,6 +172,7 @@ void
 arguments_set_sint16(i, value)
     int i
     IV value
+  PROTOTYPE: $$
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -164,6 +181,7 @@ arguments_set_sint16(i, value)
 UV
 arguments_get_uint32(i)
     int i
+  PROTOTYPE: $
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -175,6 +193,7 @@ void
 arguments_set_uint32(i, value)
     int i
     UV value
+  PROTOTYPE: $$
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -183,6 +202,7 @@ arguments_set_uint32(i, value)
 IV
 arguments_get_sint32(i)
     int i
+  PROTOTYPE: $
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -194,6 +214,7 @@ void
 arguments_set_sint32(i, value)
     int i
     IV value
+  PROTOTYPE: $$
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -202,6 +223,7 @@ arguments_set_sint32(i, value)
 void
 arguments_get_uint64(i)
     int i
+  PROTOTYPE: $
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -219,6 +241,7 @@ void
 arguments_set_uint64(i, value)
     int i
     SV* value
+  PROTOTYPE: $$
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -231,6 +254,7 @@ arguments_set_uint64(i, value)
 void
 arguments_get_sint64(i)
     int i
+  PROTOTYPE: $
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
@@ -248,6 +272,7 @@ void
 arguments_set_sint64(i, value)
     int i
     SV* value
+  PROTOTYPE: $$
   CODE:
     if(current_argv == NULL)
       croak("Not in custom type handler");
